objects/ODT_Trial_Extend_Limitations__mdt.object
<CustomObject>
    <fields>
        <fullName>Num_of_Times_Trial_Extension_for_SR__c</fullName>
        <label>Num of Times Trial Extension for SR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Times_Trial_Extension_for_TM__c</fullName>
        <label>Num of Times Trial Extension for TM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Times_Trial_Reactivation_for_SR__c</fullName>
        <label>Num of Times Trial Reactivation for SR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Trial_Extension_days_for_SR__c</fullName>
        <label>Num of Trial Extension days for SR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Trial_Extension_days_for_TM__c</fullName>
        <label>Num of Trial Extension days for TM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_days_Trial_Reactivation_for_SR__c</fullName>
        <label>Num of days Trial Reactivation for SR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_days_Trial_Reactivation_for_TM__c</fullName>
        <label>Num of days Trial Reactivation for TM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Expiry_Limit_for_Reactivation__c</fullName>
        <label>Trial Expiry Limit for Reactivation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ODT Trial Extend Limitations</label>
    <pluralLabel>ODT Trial Extend Limitations</pluralLabel>
</CustomObject>